--- a/COSHH-Generator.csproj
+++ b/COSHH-Generator.csproj
@@ -18,16 +18,25 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Costura.Fody" Version="5.7.0">
+        <!--<PackageReference Include="Costura.Fody" Version="5.7.0">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="DocumentFormat.OpenXml" Version="2.20.0" /> 
         <PackageReference Include="Fody" Version="6.8.0">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
-        <PackageReference Include="iTextSharp" Version="5.5.13.3" />
+        </PackageReference>-->
+		<PackageReference Include="DocumentFormat.OpenXml" Version="2.20.0" />
+		<PackageReference Include="iTextSharp" Version="5.5.13.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Page Update="MainWindow.xaml">
+        <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      </Page>
+      <Page Update="SubstanceEntryControl.xaml">
+        <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      </Page>
     </ItemGroup>
 	
     <Target Name="CopyData" AfterTargets="AfterBuild">
